--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* index.css */
 body {
   margin: 0;
   padding: 0;
@@ -5,15 +6,13 @@ body {
   font-family: var(--font-primary);
   font-size: calc(1rem + 0.5vw);
   color: #153464;
-  overflow: hidden auto;
+  overflow: auto hidden;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: block; 
 }
 
 html {
   height: 100%;
-  overflow-x: hidden;
 }
 
 :root {
